--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
    <data>
@@ -48,7 +49,7 @@
             android:layout_alignParentEnd="true"
             android:paddingStart="4dp"
             android:id="@+id/song_duration"
-            android:text="@{song.formattedDuration}"
+            app:duration="@{song.duration}"
             tools:text="3:22"/>
 
     </RelativeLayout>
