--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -11,6 +11,7 @@
     </data>
 
     <com.neeplayer.SlidingLayout
+        android:id="@+id/np_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
