--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -42,7 +42,6 @@
                     tools:src="@color/image_alt"
                     tools:layout_height="360dp" />
 
-
                     <SeekBar
                         android:id="@+id/np_seek_bar"
                         android:layout_height="wrap_content"
@@ -92,6 +91,7 @@
 
                             <TextView
                                 style="@style/Text.Title"
+                                android:layout_width="match_parent"
                                 android:textSize="22sp"
                                 android:gravity="center"
                                 android:text="@{model.song.title}"
@@ -100,6 +100,7 @@
 
                             <TextView
                                 style="@style/Text.Regular"
+                                android:layout_width="match_parent"
                                 android:textSize="18sp"
                                 android:gravity="center"
                                 android:text="@{model.artistName + ` – ` + model.album.title}"
@@ -169,11 +170,13 @@
 
                     <TextView
                         style="@style/Text.Title"
+                        android:layout_width="match_parent"
                         android:text="@{model.song.title}"
                         tools:text="The Weather Report Suite laa lala lalallalallal" />
 
                     <TextView
                         style="@style/Text.Regular"
+                        android:layout_width="match_parent"
                         android:text="@{model.artistName}"
                         tools:text="Jack White" />
 
@@ -185,7 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minWidth="@null"
-                    android:padding="2dp"
+                    android:padding="6dp"
                     style="?android:attr/borderlessButtonStyle"
                     app:drawable="@{model.paused ? @drawable/ic_play_arrow_black_48dp : @drawable/ic_pause_black_48dp}"
                     tools:src="@drawable/ic_pause_black_48dp"
