Use stor.io for content provider queries

--- a/app/src/main/res/layout/album.xml
+++ b/app/src/main/res/layout/album.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="album"
-            type="com.neeplayer.Album"/>
+            type="com.neeplayer.model.Album"/>
     </data>
 
     <LinearLayout
