--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -7,7 +7,7 @@
    <data>
         <variable
             name="song"
-            type="com.neeplayer.Song" />
+            type="com.neeplayer.model.Song" />
    </data>
 
 
